--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
-    <title></title>
+    <title><%title%></title>
 </head>
 <body>
-    {{> _header}}
-    {{> _add_btn}}
+    <%- include('../partials/_header.ejs') %>
+    <%- include('../partials/_add_btn.ejs') %>
     <div class="container">
-         {{{body}}}
+         <%- body %>
     </div>
-   {{!-- Script for WYSIWYG text editor --}}
+   <!-- Script for WYSIWYG text editor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.14.1/ckeditor.js" integrity="sha256-bEIQpI72w9NJuIVhTLFUF2/8uxl0u5800r8ddViuv+o=" crossorigin="anonymous"></script>
-    {{!-- Script for Materialize --}}
+    <!-- Script for Materialize -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
     
