--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,52 @@
-<div class="">Hello World</div>
+<h1>Welcome to the Hogwarts Directory</h1>
+<div class="row">
+    <div class="col s12 m12">
+        <div class="card col ">
+            <div class="card col s6 m6 center-align red">
+                <div class="card-title">
+                    Griffindoor
+                </div>
+                <div class="card-content">
+                    Wit Beyond Measure     
+                </div>
+                <div class="card-action">
+                    <a href="dashboard">Enter</a>
+                </div>
+            </div>
+            <div class=" card col s6 m6 center-align green">
+                <div class="card-title">
+                    Slytherin
+                </div>
+                <div class="card-content">
+                            Wit Beyond Measure     
+                </div>
+                <div class="card-action">
+                    <a href="../houses/add">Enter</a>
+                </div>
+            </div>
+            <div class="card col s6 m6 center-align yellow">
+            <div class="card-title">
+                Hufflepuff
+            </div>
+            <div class="card-content">
+                           Wit Beyond Measure     
+            </div>
+            <div class="card-action">
+                Enter
+            </div>
+            </div>
+            <div class="card  col s6 m6 center-align blue">
+            <div class="card-title">
+                Ravenclaw
+            </div>
+            <div class="card-content">
+                Wit Beyond Measure     
+            </div>
+            <div class="card-action">
+                Enter
+            </div>
+            </div>   
+        </div>
+        
+    </div>
+</div>
