initialized materialize css select tags

--- a/views/houses/add.ejs
+++ b/views/houses/add.ejs
@@ -1,38 +1,39 @@
 <h3>Add New Person</h3>
 <div class="row">
     <form action="/houses/addPerson" method="POST" class="col s12">
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="name" name="name">
                 <label for="name">Full Name</label>
             </div>
         </div>
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="gender" name="gender">
                 <label for="gender">Gender</label>
             </div>
         </div>
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="house" name="house">
                 <label for="house">House</label>
             </div>
         </div>
-        <div class="row">
+        
+        <div class="row col m12">
             <div class="input-field">
                 <input type="date" id="dob" name="dob">
                 <label for="dob">Date Of Birth</label>
             </div>
         </div>
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="ancestry" name="ancestry">
                 <label for="ancestry">Ancestry</label>
             </div>
         </div>
-        <div class="row">
-            <div class="input-field">
+        <div class="row col m12">
+            <div class="input-field ">
                 <select name="status" id="status">
                     <option value="student" selected>Student</option>
                     <option value="staff">Staff</option>
@@ -41,27 +42,28 @@
                 <label for="status">Status</label>
             </div>
         </div>
-        <div class="row">
-            <div class="input-field">
+         <div class="row input-field col s12">
                 <select name="alive" id="alive">
                     <option value="true" selected>Alive</option>
                     <option value="false">Deceased</option>
                 </select>
-                <label for="status">Alive</label>
+                <label for="alive">Alive</label>
             </div>
-        </div>
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="actor" name="actor">
                 <label for="actor">Actor</label>
             </div>
         </div>
-        <div class="row">
+        <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="image" name="image">
                 <label for="image">Image Url</label>
             </div>
         </div>
+  
+           
+        
         </div>
         <div class="row">
             <input type="submit" value="Save" class="btn">
