--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -25,7 +25,8 @@
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
         M.FormSelect.init(document.querySelector('#status'))
-
+        M.FormSelect.init(document.querySelector('#alive'))
+        
         CKEDITOR.replace('body',{
             plugins: 'wysiwygarea, toolbar, basicstyles, link'
         })
