--- a/views/houses/add.ejs
+++ b/views/houses/add.ejs
@@ -1,6 +1,6 @@
 <h3>Add New Person</h3>
 <div class="row">
-    <form action="/houses/addPerson" method="POST" class="col s12">
+    <form action="/houses" method="POST" class="col s12">
         <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="name" name="name">
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
             <input type="submit" value="Save" class="btn">
-            <a href="/dashboard" class="btn orange">Cancel</a>
+            <a href="../dashboard.ejs" class="btn orange">Cancel</a>
         </div>
     </form>
 </div>
