--- a/views/houses/person.ejs
+++ b/views/houses/person.ejs
@@ -1,30 +1,35 @@
 <div class="row">
     <div class="col s12 m8">
-        <h3>{{story.title}}
-            <small>
-                {{{editIcon story.user user story._id false}}}
-            </small>
+        <h3>
+            Person Name
         </h3>
         <div class="card story">
             <div class="card-content">
-                <span class="card-title">
-                    {{formatDate date 'MMMM Do YYYY, h:mm:ss: a'}}
-                </span>
-                {{{story.body}}}
+                <table class="striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                   Person Data
+                                    </a>
+                                </td>
+                            </tr>
+                       
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
     <div class="col s12 m4">
         <div class="card center-align">
             <div class="card-content">
-                <span class="card-title">
-                    {{story.user.displayName}}
-                </span>
-                {{!-- Change: add 'referrerpolicy="no-referrer"' to stop google from blocking access to the profile images --}}
-                <img src="{{story.user.image}}" referrerpolicy="no-referrer" class="circle responsive-img img-small">
-            </div>
-            <div class="card action">
-                <a href="/stories/user/{{story.user._id}}">More From {{story.user.firstName}}</a>
+                <!-- Change: add 'referrerpolicy="no-referrer"' to stop google from blocking access to the profile images -->
+                <img src="#" referrerpolicy="no-referrer" class="circle responsive-img img-small">
             </div>
         </div>
     </div>
