--- a/views/partials/_add_btn.ejs
+++ b/views/partials/_add_btn.ejs
@@ -1,3 +1,7 @@
 <div class="fixed-action-btn">
-    <a href="../houses/add" class="btn-floating btn-large waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+    <a
+        href="/add"
+        class="btn-floating btn-large waves-effect waves-light red"
+        ><i class="fas fa-plus"></i
+    ></a>
 </div>
