fixed _add_btn link

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
             <input type="submit" value="Save" class="btn">
-            <a href="../dashboard.ejs" class="btn orange">Cancel</a>
+            <a href="../dashboard" class="btn orange">Cancel</a>
         </div>
     </form>
 </div>
