--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="card col ">
             <div class="card col s6 m6 center-align red">
                 <div class="card-title">
-                    Griffindoor
+                    Gryffindor
                 </div>
                 <div class="card-content">
                     Wit Beyond Measure     
