--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,9 +8,12 @@
             ><i class="fas fa-bars"></i
         ></a>
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="/stories">Public Stories</a></li>
+            
             <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/index">Logout</a></li>
+            <li><a href="/houses/gryffindors">Gryffindor</a></li>
+            <li><a href="/houses/slytherins">Slytherin</a></li>
+            <li><a href="/houses/hufflepuffs">Hufflepuff</a></li>
+            <li><a href="/houses/ravenclaws">Ravenclaw</a></li>
         </ul>
     </div>
 </nav>
