--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
                     Wit Beyond Measure     
                 </div>
                 <div class="card-action">
-                    <a href="dashboard">Enter</a>
+                    <a href="views/houses/gryffindors.ejs">Enter</a>
                 </div>
             </div>
             <div class=" card col s6 m6 center-align green">
