--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <title></title>
 </head>
-<body>
+<body class ="Hogwarts">
     <%- include('../partials/_header.ejs') %>
     <%- include('../partials/_add_btn.ejs') %>
     <div class="container">
