--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <nav class="grey darken-3">
     <div class="class nav-wrapper container">
-        <a href="#!" class="brand-logo center"> Hogwarts Directory </a>
+        <a href="/index" class="brand-logo center"> Mossa Vitri Charm </a>
         <a
             href="#"
             data-target="mobile-demo"
@@ -9,7 +9,7 @@
         ></a>
         <ul class="sidenav" id="mobile-demo">
             
-            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/great_hall">Dashboard</a></li>
             <li><a href="/houses/gryffindors">Gryffindor</a></li>
             <li><a href="/houses/slytherins">Slytherin</a></li>
             <li><a href="/houses/hufflepuffs">Hufflepuff</a></li>
