--- a/views/houses/hufflepuffs.ejs
+++ b/views/houses/hufflepuffs.ejs
@@ -1,11 +1,12 @@
+
 <h3>Hufflepuff</h3>
-    <% if(charData.length != 0) { %>
+    <% if(charData.length != 0) { %>\
+        <div class="card">
         <table class="striped">
         <thead>
             <tr>
                 <th>Name</th>
                 <th>Status</th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -28,3 +29,4 @@
     <% } else { %>
     <p>You have not added any Characters.</p>
 <% } %>
+</div>
