--- a/views/houses/slytherins.ejs
+++ b/views/houses/slytherins.ejs
@@ -1,30 +1,31 @@
 <h3>Slytherin</h3>
-    <% if(charData.length != 0) { %>
-        <table class="striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Status</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <% charData.forEach( el => { %>
+        <% if(charData.length != 0) { %>
+            <div class="card">
+            <table class="striped">
+            <thead>
                 <tr>
-                    <td>
-                        <a href="./person/<%=el._id%>">
-                        <%= el.name %>
-                        </a>
-                    </td>
-                    <td>
-                        <span class="dash-status">
-                          <%= el.status %>
-                        </span>
-                    </td>
+                    <th>Name</th>
+                    <th>Status</th>
                 </tr>
-            <% }) %>
-        </tbody>
-        </table>
-    <% } else { %>
-    <p>You have not added any Characters.</p>
-<% } %>
+            </thead>
+            <tbody>
+                <% charData.forEach( el => { %>
+                    <tr>
+                        <td>
+                            <a href="./person/<%=el._id%>">
+                            <%= el.name %>
+                            </a>
+                        </td>
+                        <td>
+                            <span class="dash-status">
+                            <%= el.status %>
+                            </span>
+                        </td>
+                    </tr>
+                <% }) %>
+            </tbody>
+            </table>
+        <% } else { %>
+        <p>You have not added any Characters.</p>
+    <% } %>
+</div>
