--- a/views/partials/_add_room.ejs
+++ b/views/partials/_add_room.ejs
@@ -1,5 +1,5 @@
 <div class="fixed-action-btn">
-    <a href="/location" class="btn-floating btn-large waves-effect waves-light amber"
+    <a href="/add_room" class="btn-floating btn-large waves-effect waves-light amber"
         ><i class="fas fa-location-dot"></i
     ></a>
 </div>
