--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
-    <title></title>
+    <title>MVC</title>
 </head>
 <body class ="Hogwarts">
     <%- include('../partials/_header.ejs') %>
@@ -27,7 +27,7 @@
         M.FormSelect.init(document.querySelector('#status'))
         M.FormSelect.init(document.querySelector('#alive'))
         
-        CKEDITOR.replace('body',{
+        CKEDITOR.replace('description',{
             plugins: 'wysiwygarea, toolbar, basicstyles, link'
         })
     </script>
