--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,8 @@
-<nav class="grey darken-3">
+<nav class="header">
     <div class="class nav-wrapper container">
-        <a href="/index" class="brand-logo center"> Mossa Vitri Charm </a>
+        <a href="/index" class="brand-logo center"> <span class="bold">M</span>ossa 
+            <span class="bold">V</span>itri 
+            <span class="bold">C</span>harm</a>
         <a
             href="#"
             data-target="mobile-demo"
@@ -9,11 +11,11 @@
         ></a>
         <ul class="sidenav" id="mobile-demo">
             
-            <li><a href="/great_hall">Dashboard</a></li>
-            <li><a href="/houses/gryffindors">Gryffindor</a></li>
-            <li><a href="/houses/slytherins">Slytherin</a></li>
-            <li><a href="/houses/hufflepuffs">Hufflepuff</a></li>
-            <li><a href="/houses/ravenclaws">Ravenclaw</a></li>
+            <li><a class="great_hall bold" href="/great_hall">Great Hall</a></li>
+            <li><a class="gryffindor bold" href="/houses/common_room/gryffindor">Gryffindor</a></li>
+            <li><a class="slytherin bold" href="/houses/common_room/slytherin">Slytherin</a></li>
+            <li><a class="hufflepuff bold" href="/houses/common_room.hufflepuff">Hufflepuff</a></li>
+            <li><a class="ravenclaw bold" href="/houses/common_room/ravenclaw">Ravenclaw</a></li>
         </ul>
     </div>
 </nav>
