--- a/views/add_room.ejs
+++ b/views/add_room.ejs
@@ -2,9 +2,9 @@
 <div class="row">
     <form action="/houses" method="POST" class="col s12">
         <div class="row col m12">
-            <div class="input-field">
+            <div class="input-field ">
                 <input type="text" id="name" name="name">
-                <label for="name">Name</label>
+                <label for="name"  >Name</label>
             </div>
         </div>
         <div class="row col m12">
@@ -27,12 +27,13 @@
         </div>
         <div class="row col m12">
             <div class="input-field">
+                <p>Description</p>
                 <textarea id="description" name="description"></textarea>
-                <label for="description">Description</label>
+                
             </div>
         </div>
         <div class="row">
-            <input type="submit" value="Save" class="btn amber">
+            <input type="submit" value="Save" class="btn amber darken-2">
             <a href="../great_hall" class="btn red darken-4">Cancel</a>
         </div>
     </form>
