--- a/views/partials/_add_room.ejs
+++ b/views/partials/_add_room.ejs
@@ -1,5 +1,5 @@
-<div class="fixed-action-btn">
-    <a href="/add_room" class="btn-floating btn-large waves-effect waves-light amber"
-        ><i class="fas fa-location-dot"></i
+<div class="fixed-action-btn btn-float">
+    <a href="/add_room" class=" btn-floating btn-large waves-effect waves-light amber darken-2"
+        ><i class=" fas fa-map-marker-alt"></i
     ></a>
 </div>
