--- a/views/great_hall.ejs
+++ b/views/great_hall.ejs
@@ -1,38 +1,39 @@
 <div class="gh_room">
-    
-    <div class="row">
-    <div class="card gh_title col s12 m6">
-        <div class="card-content center">
-            <h3 class="bold">Great Hall</h3>
-        </div> 
-        
+    <div class="row img_fit">
+        <div class="col center row s12 m12">
+            <div class="card gh_title col s12 m6 offset-m3">
+                <div class="card-content center">
+                    <h3 class="bold">Great Hall</h3>
+                </div> 
+            </div>
+        </div>
+        <div class="col center row s12 m12">
+        <div class="card gh_data bold col s12 m4 offset-m4">
+            <% if(charData.length != 0) { %>
+            <table class="card-content center striped">
+                <thead>
+                    <tr>
+                        <th class="card header row center">Name</th>
+                        <th class="bold card header row  center">Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% charData.forEach( el => { %>
+                    <tr>
+                        <td>
+                            <a href="./houses/person/<%=el._id%>"> <%= el.name %> </a>
+                        </td>
+                        <td>
+                            <span class="dash-status bold"> <%= el.status %> </span>
+                        </td>
+                    </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+            <% } else { %>
+            <p>You have not added any Characters.</p>
+            <% } %>
+        </div>
+        </div>
     </div>
-    <div class="card gh_data center row col">
-        <% if(charData.length != 0) { %>
-        <table class="striped">
-            <thead>
-                <tr>
-                    <th class="bold">Name</th>
-                    <th class="bold">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% charData.forEach( el => { %>
-                <tr>
-                    <td>
-                        <a href="./houses/person/<%=el._id%>"> <%= el.name %> </a>
-                    </td>
-                    <td>
-                        <span class="dash-status"> <%= el.status %> </span>
-                    </td>
-                </tr>
-                <% }) %>
-            </tbody>
-        </table>
-        <% } else { %>
-        <p>You have not added any Characters.</p>
-        <% } %>
-    </div>
-    
-</div>
 </div>
