--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,52 +1,85 @@
-<h1>Welcome to the Hogwarts Directory</h1>
+
 <div class="row">
-    <div class="col s12 m12">
-        <div class="card col ">
-            <div class="card col s6 m6 center-align red">
-                <div class="card-title">
+    <div class="col center s12 m12">
+        <div class="card col s12 m6 offset-m3">
+            <div class="card-content col s12 m12">
+                <a
+                href="../houses/common_room/gryffindor"
+                class="card col s6 m6 center-align gryffindor gryffindor-card waves-effect waves-light"
+            >
+                <div class="card-title bold">
                     Gryffindor
                 </div>
-                <div class="card-content">
-                    Wit Beyond Measure     
+                <div>
+                    <p>
+                        Daring, Nerve, and Chivalry
+                    </p>
+                    <img
+                        src="../images/gryffindor_crest.webp"
+                        width="150px"
+                        alt="gryffindor house crest"
+                    />
                 </div>
-                <div class="card-action">
-                    <a href="views/houses/gryffindors.ejs">Enter</a>
-                </div>
+            </a>
+            <a
+                    href=""
+                    class="card col s6 m6 center-align slytherin slytherin-card waves-effect waves-light"
+                >
+                    <div class="card-title bold">
+                        Slytherin
+                    </div>
+                    <div>
+                        <p>
+                            Way To Greatness
+                        </p>
+
+                        <img
+                            src="../images/slytherin_crest.webp"
+                            width="150px"
+                            alt="slytherin house crest"
+                        />
+                    </div>
+                </a>
+                <a
+                    href=""
+                    class="card col s6 m6 center-align hufflepuff hufflepuff-card waves-effect waves-light"
+                >
+                    <div class="card-title bold">
+                        Hufflepuff
+                    </div>
+                    <div>
+                        <p>
+                            True and Unafraid of Toil
+                        </p>
+
+                        <img
+                            src="../images/hufflepuff_crest.webp"
+                            width="150px"
+                            alt="hufflepuff house crest"
+                        />
+                    </div>
+                </a>
+                <a
+                    href=""
+                    class="card col s6 m6 center-align ravenclaw ravenclaw-card waves-effect waves-light"
+                >
+                    <div class="card-title bold">
+                        Ravenclaw
+                    </div>
+                    <div>
+                        <p>
+                            Wit Beyond Measure
+                        </p>
+
+                        <img
+                            src="../images/ravenclaw_crest.webp"
+                            width="150px"
+                            alt="ravenclaw house crest"
+                        />
+                    </div>
+                </a>
             </div>
-            <div class=" card col s6 m6 center-align green">
-                <div class="card-title">
-                    Slytherin
-                </div>
-                <div class="card-content">
-                            Wit Beyond Measure     
-                </div>
-                <div class="card-action">
-                    <a href="../houses/add">Enter</a>
-                </div>
-            </div>
-            <div class="card col s6 m6 center-align yellow">
-            <div class="card-title">
-                Hufflepuff
-            </div>
-            <div class="card-content">
-                           Wit Beyond Measure     
-            </div>
-            <div class="card-action">
-                Enter
-            </div>
-            </div>
-            <div class="card  col s6 m6 center-align blue">
-            <div class="card-title">
-                Ravenclaw
-            </div>
-            <div class="card-content">
-                Wit Beyond Measure     
-            </div>
-            <div class="card-action">
-                Enter
-            </div>
-            </div>   
         </div>
-        
     </div>
 </div>
+<h3 class="center">Tap on the House Crest to visit the house's common room</h3>
