--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                 </div>
             </a>
             <a
-                    href=""
+                    href="../houses/common_room/slytherin"
                     class="card col s6 m6 center-align slytherin slytherin-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
@@ -41,7 +41,7 @@
                     </div>
                 </a>
                 <a
-                    href=""
+                    href="../houses/common_room/hufflepuff"
                     class="card col s6 m6 center-align hufflepuff hufflepuff-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
@@ -60,7 +60,7 @@
                     </div>
                 </a>
                 <a
-                    href=""
+                    href="../houses/common_room/ravenclaw"
                     class="card col s6 m6 center-align ravenclaw ravenclaw-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
@@ -82,4 +82,4 @@
         </div>
     </div>
 </div>
-<h3 class="center">Tap on the House Crest to visit the house's common room</h3>
+<h3 class="row center">Tap on the House Crest to visit the house's common room.</h3>
