--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <nav class="header">
     <div class="class nav-wrapper container">
-        <a href="/index" class="brand-logo center"> <span class="bold">M</span>ossa 
+        <a href="../index" class="brand-logo center"> <span class="bold">M</span>ossa 
             <span class="bold">V</span>itri 
             <span class="bold">C</span>harm</a>
         <a
