changed file name to great hall

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,7 @@ dropdown-content li > a, .dropdown-content li > span{
 
 .gh_room{
     margin: 0 !important;
-    background: url(../images/gh_img.jpg) center center no-repeat !important;
+    background: url(../images/great_hall.jpg) center center no-repeat !important;
     /* background-size: stretch !important; */
 }
 
